--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="64x64" href="%PUBLIC_URL%/favicon-64x64.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Negócios Imobiliários" />
+  <meta name="description" content="Software Cardial" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,11 +25,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Adriana Arruda</title>
+  <title>Plataforma Cardial</title>
 </head>
 
 <body>
-  <noscript>Negócios Imobiliários</noscript>
+  <noscript>Software Cardial</noscript>
   <div id="root"></div>
   
 </body>
